plugins/formal-verification/testData/diagnostics/no_contracts/function_object.kt
fun <!VIPER_TEXT!>unit_function<!>(@Suppress("UNUSED_PARAMETER") f: () -> Unit) {
}